Fix setting-buttons not working on mobile, Disable setting-buttons when input is empty

--- a/frontend/src/components/header/settings/style.scss
+++ b/frontend/src/components/header/settings/style.scss
@@ -44,7 +44,6 @@
     transition: background-color 0.2s ease;
     @media (max-width: $hamburgerBreakpoint) {
         .settings-input-wrapper:focus-within & {
-            pointer-events: all;
             opacity: 0.5;
         }
     }
